@@ -1,0 +1,3 @@
+function parse_augment(extdata)
+	if not extdata return end
+end
