@@ -1,4 +1,6 @@
 -------------------------------------------------
+Gearswap 0.605 - Fixed pet_mid/aftercast. Added/documented disable/enable. Verified that register_event will work in user documents.
+-------------------------------------------------
 Gearswap 0.604 - Added more handling to deal with monstrosity. Dramatical reduced memory requirements.
 -------------------------------------------------
 Gearswap 0.603 - Added handling to deal with monstrosity. About a week worth of misc. changes that I can't remember.
